mtls/envoy.yaml
admin:
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
    - name: mylistener
      address:
        socket_address: { address: 0.0.0.0, port_value: 9786 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: AUTO
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: upstream_service
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route: { cluster: upstream_service }
                http_filters:
                  - name: envoy.filters.http.router
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              require_client_certificate: true
              common_tls_context:
                tls_certificates:
                  - certificate_chain: {filename: /etc/envoy/certs/server.pem}
                    private_key: {filename: /etc/envoy/certs/server.key}
                validation_context:
                  trusted_ca: {filename: /etc/envoy/certs/rootCA.pem}

  clusters:
    - name: upstream_service
      connect_timeout: 1s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      dns_lookup_family: V4_ONLY
      health_checks:
        timeout: 2s
        interval: 60s
        interval_jitter: 30s
        initial_jitter: 5s
        unhealthy_threshold: 3
        healthy_threshold: 2
        http_health_check:
          path: '/healthz'
      common_lb_config:
        healthy_panic_threshold: {}

      load_assignment:
        cluster_name: upstream_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: myserv.local
                      port_value: 9211
